--- a/css/w1_style.css
+++ b/css/w1_style.css
@@ -1,6 +1,5 @@
 html{
     width: 100%;
-    height: 100%
 }
 
 body{
@@ -9,35 +8,45 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     width: 100%;
-    height: 100%;
 }
 
-.tudo{   
+#corpo{
     width: 100%;
-    height: 100%;
-    
-}
-
-#sidebar{
-    
-    background-color: rgba(255,255,255, 0.4);
-    width: 20%;
-    height: 100%;
-
-    display: inline-block;
-
-    
-    box-shadow: 1px 0 10px #888888;
-    -moz-box-shadow: 1px 0 10px #888888;
-    -webkit-box-shadow: 1px 0 10px #888888;
-    
-    border-radius: 0px 5px 5px 0px;
-    -moz-border-radius: 0px 5px 5px 0px;
-    -webkit-border-radius: 0px 5px 5px 0px;
+    display: block;
 }
 
 #conteudo{
-    display: inline-block;
-    width: 76%;
-    height: 100%;
+    display: block;
+    
+    width: 100%;
+    padding: 40px;
+}
+
+#menu{
+    position: fixed;
+    margin: 0;
+    width: 100%;
+    text-align: center;  
+}
+
+#menu-box{
+    padding: 5px;
+    background-image: -moz-linear-gradient(center top , #555, #333);
+    background-image: linear-gradient(center top , #555, #333);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 -1px 0 rgba(0, 0, 0, 0.1) inset;
+}
+
+
+#menu-box a:hover{
+    color: #fff;
+    text-shadow: 1px 1px 10px #ffffff;
+}
+
+a, a:visited{
+    text-decoration: none;
+    color: #ddd;
+}
+
+a:hover{
+    color: #fff;
 }
