--- a/css/w1_style.css
+++ b/css/w1_style.css
@@ -3,21 +3,14 @@ html{
 }
 
 body{
-    
     background-image: url('../image/Background-Light.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     width: 100%;
 }
 
-#corpo{
-    width: 100%;
-    display: block;
-}
-
 #conteudo{
     display: block;
-    
     width: 100%;
     padding: 40px;
 }
@@ -30,12 +23,18 @@ body{
 }
 
 #menu-box{
+    color: #333;
     padding: 5px;
     background-image: -moz-linear-gradient(center top , #555, #333);
     background-image: linear-gradient(center top , #555, #333);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 -1px 0 rgba(0, 0, 0, 0.1) inset;
 }
 
+
+#menu-box a{
+    color: #fff;
+    padding: 0 6px 0 6px;
+}
 
 #menu-box a:hover{
     color: #fff;
