Remove style do elemento pathe adiciona classe territorio. Començando a percorret o array do json

--- a/css/mapa.css
+++ b/css/mapa.css
@@ -4,6 +4,9 @@ root {
 
 .territorio{
     background: #484;
-    fill-opacity: 0.3;
-    fill: green;
 }
+
+.territorio:hover{
+    fill-opacity: 0.3;
+}
+
