--- a/css/w1_style.css
+++ b/css/w1_style.css
@@ -13,9 +13,11 @@ body{
     display: block;
     width: 100%;
     padding: 40px;
+    position: relative;
 }
 
 #menu{
+    z-index: 1100;
     position: fixed;
     margin: 0;
     width: 100%;
@@ -27,6 +29,7 @@ body{
     padding: 5px;
     background-image: -moz-linear-gradient(center top , #555, #333);
     background-image: linear-gradient(center top , #555, #333);
+    background-image: -webkit-linear-gradient(center top , #555, #333);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 -1px 0 rgba(0, 0, 0, 0.1) inset;
 }
 
@@ -54,4 +57,42 @@ svg{
     width: 100%;
     height: 100%;
     background-color: #bbb;
+    overflow: scroll;
+}
+
+
+.lateral{
+    position: fixed;
+    height: 100%;
+    width: 3px;
+    z-index: 1000;
+    left: 0;
+    top: 30px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 -1px 0 rgba(0, 0, 0, 0.1) inset;
+    color: #EEE;
+    padding: 5px;
+    background-image: -moz-linear-gradient(left center , #555, #333);
+    background-image: linear-gradient(left center , #555, #333);
+    background-image: -webkit-linear-gradient(left center, #555, #333);
+    overflow: hidden;
+}
+
+.lateral:hover{
+    width: 300px;
+}
+.small{
+    width: 3px;
+}
+
+.large{
+    width: 300px;
+}
+
+.lateral .options{
+    margin: 8px;
+}
+
+.lateral .mostrar{
+    color: #fff;
+    vertical-align: central;
 }
