--- a/css/w1_style.css
+++ b/css/w1_style.css
@@ -27,7 +27,9 @@ body{
 #menu-box{
     color: #333;
     padding: 5px;
+    background-color: #555;
     background-image: -moz-linear-gradient(center top , #555, #333);
+    background-image: -o-linear-gradient(center top , #555, #333);
     background-image: linear-gradient(center top , #555, #333);
     background-image: -webkit-linear-gradient(center top , #555, #333);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 -1px 0 rgba(0, 0, 0, 0.1) inset;
