--- a/css/w1_style.css
+++ b/css/w1_style.css
@@ -27,7 +27,9 @@ body{
 #menu-box{
     color: #333;
     padding: 5px;
+    background-color: #555;
     background-image: -moz-linear-gradient(center top , #555, #333);
+    background-image: -o-linear-gradient(center top , #555, #333);
     background-image: linear-gradient(center top , #555, #333);
     background-image: -webkit-linear-gradient(center top , #555, #333);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 -1px 0 rgba(0, 0, 0, 0.1) inset;
@@ -56,7 +58,6 @@ a:hover{
 svg{
     width: 100%;
     height: 100%;
-    background-color: #bbb;
     overflow: scroll;
 }
 
@@ -95,4 +96,33 @@ svg{
 .lateral .mostrar{
     color: #fff;
     vertical-align: central;
+}
+
+.box-mapas{
+    display: block;
+    width: 90%;
+    /*border: solid 1px black;*/
+}
+
+.botao-mapa{
+    padding: 3px;
+    display: inline-block;
+    width: 210px;
+    height: 120px;
+    border: solid 1px #555;
+    border-radius: 4px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 -1px 0 rgba(0, 0, 0, 0.1) inset;
+    margin: 3px;
+    text-align: center;
+    vertical-align: central;
+    background: #f6f6f6;
+}
+
+a.mapas{
+        vertical-align: central;
+       color: black; 
+}
+
+a.mapas:hover{
+    color: gray;
 }
