--- a/css/w1_style.css
+++ b/css/w1_style.css
@@ -72,6 +72,7 @@ svg{
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 -1px 0 rgba(0, 0, 0, 0.1) inset;
     color: #EEE;
     padding: 5px;
+    background: #555;
     background-image: -moz-linear-gradient(left center , #555, #333);
     background-image: linear-gradient(left center , #555, #333);
     background-image: -webkit-linear-gradient(left center, #555, #333);
