--- a/view/war/estilos/estilo.css
+++ b/view/war/estilos/estilo.css
@@ -44,4 +44,13 @@ body {
 	background-color:black;
 }
 
+.prompt{
+    width: 10px;
+     padding: 5px; 
+     color: #696969;
+}
 
+.prompt:hover{
+    width: 20%;
+    color: white;
+}
